<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1">1. What are the names of Mars\' moons?</string>
    <string name="question2">2. Which of the following are Galilean moons?</string>
    <string name="question3">3. Which of the following has the largest amount of water?</string>
    <string name="question4">4. Which comet crashed into Jupiter in July 1994?</string>
    <string name="question5">5. Which planet is named after the Roman god of the sea?</string>
    <string name="submit_responses_text">Submit Answers</string>
    <string name="reset_quiz_text">Reset Quiz</string>
    // Possible answers for quiz questions
    // Options for question 1
    <string name="answer11">Titan</string>
    <string name="answer12">Deimos</string>
    <string name="answer13">Phobos</string>
    <string name="answer14">Charon</string>
    // Options for question 2
    <string name="answer21">Io</string>
    <string name="answer22">Callisto</string>
    <string name="answer23">Enceladus</string>
    <string name="answer24">Europa</string>
    //Options for question 3
    <string name="answer31">Europa</string>
    <string name="answer32">Neptune</string>
    <string name="answer33">Earth</string>
    <string name="answer34">Titan</string>
    // Options for question 4
    <string name="answer41">Halley\'s Comet</string>
    <string name="answer42">Apotheosis</string>
    <string name="answer43">Comet Shoemaker-Levy 9</string>
    <string name="answer44">Comet from Full House</string>
    // Options for question 5
    <string name="answer51">Jupiter</string>
    <string name="answer52">Mars</string>
    <string name="answer53">Neptune</string>
    <string name="answer54">Saturn</string>
</resources>
